the style of .tou-info h3 fixed to capitalize

--- a/src/components/Tour/tour.scss
+++ b/src/components/Tour/tour.scss
@@ -41,7 +41,7 @@
 .tour-info {
   padding: 1rem 0.5rem;
   h3 {
-    text-transform: uppercare;
+    text-transform: capitalize;
     color: $mainGreen;
   }
   h4 {
